--- a/public/gestao.html
+++ b/public/gestao.html
@@ -8,31 +8,9 @@
     <title>Gestão</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-white bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">GesAlunos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="inserir.html">Adicionar Aluno</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="gestao.html">Alunos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+  <body onload="getNavbar();">
+    <div id="nbar">
+    </div>
     <div class="container">
         <h1>Gestão Alunos</h1>
         <button 
