--- a/public/login.html
+++ b/public/login.html
@@ -5,41 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link href="styles/stylesheet.css">
+    <script type="text/javascript" src="scripts.js"></script>
 
     <title>Login</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-white bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">GesAlunos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="inserir.html">Adicionar Aluno</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="gestao.html">Alunos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+  <body onload="getNavbar();">
+    <div id="nbar">
+    </div>
+    <img src="images/key.jpeg" alt="image"> 
     <form class="position-absolute top-50 start-50 translate-middle">
         <div class="form-row">
           <div class="form-group col-md-100">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            <input type="email" class="form-control " id="inputEmail4" placeholder="Email">
           </div>
           <div class="form-group col-md-100">
             <label for="inputPassword4">Password</label>
@@ -47,10 +27,10 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="inputAddress">Endereço</label>
+         <!--  <label for="inputAddress">Endereço</label>
           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
           <div class="form-group">
-            <label for="inputAddress2">Address 2</label>
+           <label for="inputAddress2">Address 2</label>
             <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
           </div>
         </div>
@@ -71,19 +51,22 @@
             </select>
           </div>
           <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
+            <label for="inputZip">Zip</label> 
+            
             <input type="text" class="form-control" id="inputZip">
           </div>
         </div>
         <div class="form-group">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <input class="form-check-input" type="checkbox" id="gridCheck"> 
             <label class="form-check-label" for="gridCheck">
               Check me out
             </label>
           </div>
-        </div>
-        <button type="submit" class="btn btn-primary col-md-100">Sign in</button>
+        </div>-->
+
+        <div></div>
+        <button type="submit" class="btn btn-primary col-md-100 mt-3">Sign in</button>
       </form>
 </body>
 </html>
