--- a/public/login.html
+++ b/public/login.html
@@ -15,18 +15,45 @@
     <div id="nbar">
     </div>
     <img src="images/key.jpeg" alt="image"> 
-    <form class="position-absolute top-50 start-50 translate-middle">
-        <div class="form-row">
-          <div class="form-group col-md-100">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control " id="inputEmail4" placeholder="Email">
+    <div class="container login-container">
+      <div class="row">
+          <div class="col-md-6 login-form-1">
+              <h3>Login for Form 1</h3>
+              <form>
+                  <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <input type="submit" class="btnSubmit" value="Login" />
+                  </div>
+                  <div class="form-group">
+                      <a href="#" class="ForgetPwd">Forget Password?</a>
+                  </div>
+              </form>
           </div>
-          <div class="form-group col-md-100">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+          <div class="col-md-6 login-form-2">
+              <h3>Login for Form 2</h3>
+              <form>
+                  <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <input type="submit" class="btnSubmit" value="Login" />
+                  </div>
+                  <div class="form-group">
+
+                      <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
+                  </div>
+              </form>
           </div>
-        </div>
-        <div class="form-group">
+      </div>
+  </div>
          <!--  <label for="inputAddress">Endereço</label>
           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
           <div class="form-group">
