--- a/public/navbar.html
+++ b/public/navbar.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="inserir.html">Adicionar Aluno</a>
+            <a class="nav-link active" aria-current="page" href="adicionaralunos.html">Adicionar Aluno</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="gestao.html">Alunos</a>
