--- a/public/adicionaralunos.html
+++ b/public/adicionaralunos.html
@@ -10,10 +10,9 @@
     <title>Adicionar Alunos</title>
 
 </head>
-<body onload="getNavbar();">
+<body onload="initForm();">
     <div id="nbar">
     </div>
-<body>
     <div class="container-fluid p-4 text-center"><h1>Dados do utilizador</h1>
     </div>
     <div class="container">
@@ -103,9 +102,7 @@
             </div>
           </div>                 
         </div> -->
-        <button onclick="getData();" type="button" class="btn btn-primary mt-4">Adicionar</button>
+        <button onclick="adicionar();" type="button" class="btn btn-primary mt-4">Adicionar</button>
       </div>
-    </body>
-</html>
 </body>
 </html>
