--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
   </head>
   <body onload="getNavbar();">
     <div id="nbar">
+
+    </div>
+    <div class="text-center mt-5">
+    <img src="images/vector.png" class="img-fluid" alt="Responsive image">
     </div>
   </body>
 </html>
