--- a/public/login.html
+++ b/public/login.html
@@ -14,46 +14,28 @@
   <body onload="getNavbar();">
     <div id="nbar">
     </div>
-    <img src="images/key.jpeg" alt="image"> 
-    <div class="container login-container">
+    <div class="container login-container mt-5 form-control">
+      <div class="text-center">
+        <img src="images/imagekey.png" width="200" height="100"class="rounded" alt="...">
+      </div>
       <div class="row">
           <div class="col-md-6 login-form-1">
-              <h3>Login for Form 1</h3>
+              <h3>Faça LogIn</h3>
               <form>
-                  <div class="form-group">
+                  <div class="form-group mt-3">
                       <input type="text" class="form-control" placeholder="Your Email *" value="" />
                   </div>
-                  <div class="form-group">
+                  <div class="form-group mt-3">
                       <input type="password" class="form-control" placeholder="Your Password *" value="" />
                   </div>
-                  <div class="form-group">
+                  <div class="form-group mt-3">
                       <input type="submit" class="btnSubmit" value="Login" />
                   </div>
-                  <div class="form-group">
-                      <a href="#" class="ForgetPwd">Forget Password?</a>
+                  <div class="form-group mt-3">
+                      <a href="#" class="ForgetPwd">Redefinir Senha.</a>
                   </div>
               </form>
           </div>
-          <div class="col-md-6 login-form-2">
-              <h3>Login for Form 2</h3>
-              <form>
-                  <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Your Email *" value="" />
-                  </div>
-                  <div class="form-group">
-                      <input type="password" class="form-control" placeholder="Your Password *" value="" />
-                  </div>
-                  <div class="form-group">
-                      <input type="submit" class="btnSubmit" value="Login" />
-                  </div>
-                  <div class="form-group">
-
-                      <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
-                  </div>
-              </form>
-          </div>
-      </div>
-  </div>
          <!--  <label for="inputAddress">Endereço</label>
           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
           <div class="form-group">
@@ -92,8 +74,5 @@
           </div>
         </div>-->
 
-        <div></div>
-        <button type="submit" class="btn btn-primary col-md-100 mt-3">Sign in</button>
-      </form>
 </body>
 </html>
