--- a/public/adicionaralunos.html
+++ b/public/adicionaralunos.html
@@ -90,7 +90,7 @@
                   class="form-select" id="tipo">
                 </select>
             </div>
-            <!-- <div class="col-sm-8">
+           <!--  <div class="col-sm-8 mt-3">
               <label 
               for="foto" 
               lass="col-sm-4 col-form-label">Escolher fotografia:</label>
@@ -99,9 +99,9 @@
                 type="file" 
                 id="foto"
                 placeholder="nº telemóvel...">
-            </div>
+            </div> -->
           </div>                 
-        </div> -->
+        </div> 
         <button onclick="adicionar();" type="button" class="btn btn-primary mt-4">Adicionar</button>
       </div>
 </body>
