--- a/public/gestao.html
+++ b/public/gestao.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="styles/stylesheet.css">
+    <script type="text/javascript" src="scripts.js"></script>
     <title>Gestão</title>
 </head>
-<body>
   <body onload="getNavbar();">
     <div id="nbar">
     </div>
-    <div class="container">
+    <div class="container mt-5">
         <h1>Gestão Alunos</h1>
         <button 
         onclick="getData();" 
