--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,7 +1,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-white bg-dark">
+  
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">GesAlunos</a>
+      <a class="navbar-brand" href="index.html">GesAlunos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,17 +11,22 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="adicionaralunos.html">Adicionar Aluno</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link active" aria-current="page" href="gestao.html">Alunos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="login.html">Login</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div class="pos-f-t">
+          <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+              <h4 class="text-white">Collapsed content</h4>
+              <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </nav>
